--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -300,7 +300,7 @@
                             <constraint firstItem="kXk-Ny-dVC" firstAttribute="top" secondItem="8vs-OH-kC5" secondAttribute="top" id="fdd-5h-EOD"/>
                             <constraint firstAttribute="trailing" secondItem="l9g-Ru-wYO" secondAttribute="trailing" id="meH-bh-rPs"/>
                             <constraint firstItem="kXk-Ny-dVC" firstAttribute="leading" secondItem="0rk-Gf-p1l" secondAttribute="leading" id="nRl-VV-U9L"/>
-                            <constraint firstItem="l9g-Ru-wYO" firstAttribute="top" secondItem="8vs-OH-kC5" secondAttribute="top" id="nys-H8-4VT"/>
+                            <constraint firstItem="l9g-Ru-wYO" firstAttribute="top" secondItem="kXk-Ny-dVC" secondAttribute="top" id="nys-H8-4VT"/>
                             <constraint firstItem="l9g-Ru-wYO" firstAttribute="leading" secondItem="0rk-Gf-p1l" secondAttribute="leading" id="qc9-Dc-yUh"/>
                         </constraints>
                     </view>
