--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="12O-zm-tRl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="old-WE-gHJ">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -204,7 +204,7 @@
         <!--Auth View Controller-->
         <scene sceneID="Uqw-n5-Vtq">
             <objects>
-                <viewController id="UMm-hg-q9q" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AuthViewController" id="UMm-hg-q9q" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ad9-tk-mht">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -217,7 +217,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mdv-2d-nQf">
-                                <rect key="frame" x="16" y="724" width="382" height="48"/>
+                                <rect key="frame" x="16" y="758" width="382" height="48"/>
                                 <color key="backgroundColor" name="YP White"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="feW-cI-Zj0"/>
@@ -319,7 +319,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="t8H-Qt-1us">
             <objects>
-                <tabBarController id="dcz-hy-FCd" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarViewController" id="dcz-hy-FCd" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yZH-Yg-3WQ">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -339,13 +339,44 @@
             </objects>
             <point key="canvasLocation" x="-999" y="349"/>
         </scene>
+        <!--Splash View Controller-->
+        <scene sceneID="AO6-sw-nfK">
+            <objects>
+                <viewController id="old-WE-gHJ" customClass="SplashViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="q4v-k4-ZSo">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch_image2" translatesAutoresizingMaskIntoConstraints="NO" id="Wyc-WP-gwc">
+                                <rect key="frame" x="169.5" y="409.5" width="75" height="77"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="77" id="BaM-eH-8eL"/>
+                                    <constraint firstAttribute="width" constant="75" id="elt-Y5-U74"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="EnH-WZ-Zys"/>
+                        <color key="backgroundColor" name="YP Black"/>
+                        <constraints>
+                            <constraint firstItem="Wyc-WP-gwc" firstAttribute="centerX" secondItem="q4v-k4-ZSo" secondAttribute="centerX" id="7Ur-Lf-nYd"/>
+                            <constraint firstItem="Wyc-WP-gwc" firstAttribute="centerY" secondItem="q4v-k4-ZSo" secondAttribute="centerY" id="c2h-aV-7RT"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <segue destination="12O-zm-tRl" kind="presentation" identifier="ShowAuthenticationScreen" animates="NO" modalPresentationStyle="fullScreen" id="gIn-Pf-TgW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Pp-fy-AgY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2011.594202898551" y="-209.59821428571428"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="rZ2-0Q-PEf">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="12O-zm-tRl" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="oRH-qO-eCo">
-                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -361,6 +392,7 @@
     <resources>
         <image name="0" width="1600" height="1059"/>
         <image name="backward_image" width="24" height="24"/>
+        <image name="launch_image2" width="73" height="75.5"/>
         <image name="logo_of_unsplash" width="60" height="60"/>
         <image name="nav_back_button" width="24" height="24"/>
         <image name="not_favorite" width="42" height="42"/>
